# Mandelbrot

./: .gitignore  Mandel.cabal  Setup.hs  stack.yaml
src/: Complex.hs  Constants.hs  Lists.hs  Main.hs  Shader.hs  Util.hs
